# NewsAgent

./: .env.example  .gitignore  Dockerfile  docker-compose.yml  postgresql.conf
finews-backend/: main.py  pyproject.toml
finews-backend/agents/: news_agent copy.py  news_agent.py  news_analyst_prompts.py  utils.py
finews-backend/api/: auth.py  endpoints.py
finews-backend/core/: config.py
finews-backend/db/: database.py  init_db.py
finews-backend/models/: models.py
finews-backend/notebooks/: build_graph copy.ipynb  build_graph.ipynb  create_one_user.ipynb  ollama_test.ipynb  test_db.ipynb  test_news_agent.ipynb  yfinance.ipynb
finews-backend/tools/: ddg_search.py  yfinance_news.py
finews-backend/utils/: fake_user.py
src/finews/services/: news_fetcher.py
